src/pages/application/index.module.css
.container {
  display: flex;
  gap: 48px;
  align-items: stretch;
  flex-direction: column;

  @media (max-width: 1280px) {
    padding: var(--space-lg);
  }

  .application {
    display: flex;
    gap: 32px;
    height: 600px;
    & > * {
      flex: 1 1 0px;
    }

    @media (max-width: 1280px) {
      flex-direction: column;
      height: auto;
    }

    & .application-form {
      display: flex;
      flex-direction: column;
      gap: var(--space-sm);

      & .heading {
        padding-bottom: 12px;
        position: relative;
        box-sizing: border-box;

        &[data-type="placeholder"] {
          color: #667085;
        }

        &::after {
          content: "";
          display: block;
          width: 100%;
          height: 1px;
          background-color: #eaecf0;
          position: absolute;
          bottom: 0;
          left: 0;
        }
      }

      & .form {
        display: flex;
        flex-direction: column;
        gap: var(--space-sm);
        height: 544px;
        & .row {
          display: inline-flex;
          gap: 16px;
          @media (max-width: 1280px) {
            flex-direction: column;
          }
          & > * {
            flex: 1;
          }
        }
      }
    }

    & .preview {
      flex: 1 1 0px;
      background-color: #f2f4f7;
      border-radius: 12px;
      position: relative;
      overflow: hidden;
      @media (max-width: 1280px) {
        min-height: 400px;
      }

      & .preview-content {
        height: 100%;
        overflow: scroll;
        white-space: pre-wrap;
        margin: 0;
        padding: 24px;
        font-size: 18px;
        line-height: 28px;
        box-sizing: border-box;
        color: #667085;
      }

      & .preview-actions {
        display: flex;
        justify-content: end;
        padding: 24px;
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        background: linear-gradient(
          to bottom,
          transparent 0%,
          var(--color-backround-common) 80%
        );
      }
    }
  }
}

